--- a/openrtk_msg/package.xml
+++ b/openrtk_msg/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>rtk_msg</name>
+  <name>openrtk_msg</name>
   <version>0.0.0</version>
-  <description>The rtk_msg package</description>
+  <description>The openrtk_msg package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
